# File_Manager_OS

./: CMakeLists.txt  README.md  archives.h  file_info_functions.h  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  searchdialog.cpp  searchdialog.h  searchdialog.ui  zip.py
